# receipts

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  ai_parsing.py  ai_parsing_with_persistence.py  api_response.py  database_models.py  docker-compose.yml  example_persistence.py  example_user_management.py  image_processing.py  main.py  models.py  pyproject.toml  pytest.ini  receipt_parser.py  receipt_persistence.py  receipt_processor.py  receipts.db  receipts.py  requirements.txt  test_configurable_threshold.py  test_debug_ocr.py  test_env_setup.py  test_explainable_scoring.py  test_fallback_decision.py  test_field_extraction.py  test_idempotency_simple.py  test_performance.py  test_pure_orchestrator.py  test_quality_scoring.py  test_receipts.db  test_unified_parser.py  test_user_management.py  token_tracking.py  token_usage_persistence.py  token_utils.py  (+3 more)
contracts/: interfaces.py
core/: __init__.py  logging.py
docs/: architecture.md  concurrency.md  retry-strategies.md  testing.md
migrations/: add_idempotency_constraints.py  add_performance_indexes.py  migrate_to_clean_schema.py
pipeline/: __init__.py  processor.py
schema/: clean_repository.py  database_initializer.py
services/: __init__.py  batch_service.py  file_service.py  ocr_service.py  parser_service.py  retry_service.py  token_service.py
src/: __init__.py  api_response.py  database_models.py  image_processing.py  receipt_persistence.py  token_usage_persistence.py  user_manager.py
storage/: __init__.py  database.py  idempotency.py  repository.py
tests/: conftest.py  (+8 more)
(+152 files in other folders)
